--- a/app/src/main/resources/templates/solicitacao/cadastro.html
+++ b/app/src/main/resources/templates/solicitacao/cadastro.html
@@ -43,7 +43,7 @@
                 </div>
 
                 <div class="field">
-                    <div class="control">
+                    <div class="control is-danger">
                         <span>*Gênero:</span>
                         <label>
                             <input name="genero" type="radio" value ="F" id="genero1">F
