--- a/app/src/main/resources/templates/solicitacao/listagens/listaSolicitacaoCasa.html
+++ b/app/src/main/resources/templates/solicitacao/listagens/listaSolicitacaoCasa.html
@@ -7,39 +7,50 @@
 <body>
 <div th:include="@{/partes/cabecalhoPadrao}"/>
 
-<main>
-    <div class="container">
+<header>
+    <nav class="navbar is-fixed-top is-info has-text-centered nav-style" aria-label="main navigation">
+        <label>
+            HOSPEBEM
+        </label>
+    </nav>
+</header>
 
-        <div class="columns is-mobile is-centered">
-            <div class="column">
-                <h1 class="title is-half centralizar espacamento">Lista de Solicitações Casa</h1>
+<div class="panel-block is-mobile">
+    <h1 class="padding-bottom">Lista de Solicitações Casa:</h1>
+    <table class="table pricing__table">
+        <tr class="columns">
+            <td class="column has-text-centered">Data</td>
+            <td class="column has-text-centered">Nome</td>
+            <td class="column has-text-centered">Idade</td>
+            <td class="column has-text-centered">Informações</td>
+            <td class="column has-text-centered"></td>
+        </tr>
+        <tr class="columns" th:each="solicitacao : ${solicitacoesCasa}">
+            <!--<div th:if="${solicitacao.cancelamento == false} and ${solicitacao.status != 'Negado'}">-->
+                <td class="column has-text-centered">19-8-2013</td>
+                <td class="column has-text-centered" th:text="${solicitacao.nome}"></td>
+                <td class="column has-text-centered">24</td>
 
-                <div class="columns is-mobile is-centered">
-                    <table class="table centralizar">
-                        <tr>
-                            <th>Nome</th>
-                            <th>Última Atualização</th>
-                            <th>Status</th>
-                            <th></th>
-                        </tr>
-                        <tr th:each="solicitacao : ${solicitacoesCasa}">
+                <td class="column has-text-centered">
+                    <form th:action="@{/solicitacao/dados}" method="get">
+                        <input type="hidden" name="id" th:value="${solicitacao.id}">
+                        <button class="button " type="submit">
+                            <i class="fas fa-eye icons-color"></i>
+                        </button>
+                    </form>
+                </td>
 
-                            <td th:text="${solicitacao.nome}"> </td>
-                            <td>11-11-2018</td>
-                            <td th:text="${solicitacao.status}"></td>
-                            <td>
-                                <form th:action="@{/quartos/listaQuartos}" method="get">
-                                    <input type="hidden" name="id" th:value="${solicitacao.id}">
-                                    <button type="submit" class="button is-info">Selecionar Quarto</button>
-                                </form>
-                            </td>
-                        </tr>
-                    </table>
-                </div>
+                <td>
+                    <form th:action="@{/solicitacao/vincular}" method="post">
+                        <input type="hidden" name="id" th:value="${solicitacao.id}">
+                        <button class="button " type="submit">
+                            <i>Vincular</i>
+                        </button>
+                    </form>
+                </td>
             </div>
-        </div>
-    </div>
-</main>
-
+        </tr>
+    </table>
+</div>
 </body>
 </html>
