--- a/app/src/main/resources/templates/solicitacao/cadastro.html
+++ b/app/src/main/resources/templates/solicitacao/cadastro.html
@@ -42,26 +42,26 @@
         </div>
 
         <div class="columns is-mobile card-content">
-            <form action="" th:action="@{/solicitacao/cadastro}" th:object="${solicitacao}" method="post">
+            <form action="" th:action="@{/solicitacao/cadastro}" th:object="${solicitacao}" method="post" onsubmit="return validaCadastroSolicitacao(event)" id="formSolicitacao">
                 <div class="column">
                     <div class="field">
                         <div class="control">
-                            <span>Nome Completo:</span>
-                            <input class="input input-fancy" th:field="*{nome}" type="text">
+                            <span>*Nome Completo:</span>
+                            <input class="input input-fancy" th:field="*{nome}" type="text" id="nome">
                         </div>
                     </div>
                 </div>
                 <div class="column">
                     <div class="field">
                         <div class="control">
-                            <span>Gênero:</span>
                             <label>
-                                <input th:field="*{genero}" type="radio" value="F">
-                                <span>F</span>
+                                <span>*</span>
+                                <input th:field="*{genero}" type="radio" value="F" id="genero1">
+                                <span>Feminino</span>
                             </label>
                             <label>
-                                <input th:field="*{genero}" type="radio" value="M">
-                                <span>M</span>
+                                <input th:field="*{genero}" type="radio" value="M" id="genero2">
+                                <span>Masculino</span>
                             </label>
                         </div>
                     </div>
@@ -69,10 +69,10 @@
                 <div class="column">
                     <div class="field">
                         <div class="control">
-                            <span>Data de nascimento:</span>
+                            <span>*Data de nascimento:</span>
                             <input id="dataNascimento" placeholder="Clique para selecionar uma data"
-                                   type="text" class="input input-fancy datepicker" th:field="*{dataNascimento}"
-                                   onkeypress="return false;">
+                                   type="text" class="input input-fancy datepicker-retroativo" th:field="*{dataNascimento}"
+                                   onkeypress="return false">
                         </div>
                     </div>
                 </div>
@@ -80,32 +80,31 @@
                     <div class="field">
                         <div class="control">
                             <label>
-                                <input name="cadeirante" type="checkbox" value="sim">
-                                <span>Hóspede cadeirante</span>
+                                <input type="checkbox" value="sim" id="cadeirante.sim" th:field="*{cadeirante}">
+                                <span>O hospede é cadeirante</span>
                             </label>
-
                         </div>
                     </div>
                 </div>
                 <div class="column">
                     <div class="field">
                         <div class="control">
-                            <span>Caso o paciente seja cadeirante, informe o seu peso:</span>
-                            <input class="input input-fancy" th:field="*{peso}" type="number">
+                            <span>Caso o hospede seja cadeirante, informe o seu peso:</span>
+                            <input class="input input-fancy" th:field="*{peso}" type="text" maxlength="3" id="peso">
                         </div>
                     </div>
                 </div>
                 <div class="column">
                     <div class="field">
                         <div class="control">
-                            <span>Situação do Paciente:</span>
+                            <span>*Situação do Hospede:</span>
                             <label>
-                                <input th:field="*{situacao}" type="radio" value="pre">
-                                <span>Pré-transplantado</span>
+                                <input th:field="*{situacao}" type="radio" value="pre" id="situacao.pre">
+                                <span>Pré-transplante</span>
                             </label>
                             <label>
-                                <input th:field="*{situacao}" type="radio" value="pos">
-                                <span>Pós-transplantado</span>
+                                <input th:field="*{situacao}" type="radio" value="pos" id="situacao.pos">
+                                <span>Pós-transplante</span>
                             </label>
                         </div>
                     </div>
@@ -115,7 +114,7 @@
                         <div class="control">
                             <span>Data do transplante:</span>
                             <input id="dataTransplante" placeholder="Clique para selecionar uma data"
-                                   type="text" class="input input-fancy datepicker" th:field="*{dataTransplante}"
+                                   type="text" class="input input-fancy datepicker-retroativo" th:field="*{dataTransplante}"
                                    onkeypress="return false;">
                         </div>
                     </div>
@@ -123,9 +122,9 @@
                 <div class="column">
                     <div class="field">
                         <div class="control">
-                            <span>Data de entrada requerida:</span>
+                            <span>*Data de entrada requerida:</span>
                             <input id="dataEntrada" placeholder="Clique para selecionar uma data"
-                                   type="text" class="input input-fancy datepicker" th:field="*{dataEntrada}"
+                                   type="text" class="input input-fancy datepicker-futuro" th:field="*{dataEntrada}"
                                    onkeypress="return false;">
                         </div>
                     </div>
@@ -135,7 +134,8 @@
                         <div class="control">
                             <span>Data de saída (previsão):</span>
                             <input id="dataSaida" placeholder="Clique para selecionar uma data"
-                                   type="text" class="input input-fancy datepicker" th:field="*{dataSaida}" onkeypress="return false;">
+                                   type="text" class="input input-fancy datepicker-futuro" th:field="*{dataSaida}"
+                                   onkeypress="return false;">
                         </div>
                     </div>
                 </div>
@@ -152,7 +152,7 @@
                         <div class="control">
                             <h3 class="subtitle is-3">Endereço</h3>
 
-                            <span>Rua:</span>
+                            <span>Logradouro:</span>
                             <input class="input input-fancy" th:field="*{endereco.rua}" type="text">
                         </div>
                     </div>
@@ -185,7 +185,7 @@
                 <div class="column">
                     <div class="field">
                         <div class="control">
-                            <span>Uf:</span>
+                            <span>UF:</span>
                             <input class="input input-fancy" th:field="*{endereco.uf}" type="text">
                         </div>
                     </div>
@@ -193,7 +193,7 @@
 
                 <div class="column">
                     <h4 class="title subtitle is-3">Dados do Acompanhante</h4>
-                    <h5 class="subtitle is-6">(Os campos do acompanhante 1 são obrigatórios)</h5>
+                    <h5 class="subtitle is-6 campo-obrigatorio">(Os campos do acompanhante 1 são obrigatórios)</h5>
                 </div>
 
                 <div th:each="acompanhante, acompIndex : ${solicitacao.acompanhantes}">
@@ -201,7 +201,7 @@
                         <div class="field">
                             <div class="control">
                                 <p>Nome acompanhante <span th:text="${acompIndex.index + 1}"></span>:
-                                    <input class="input input-fancy" type="text" th:field="*{acompanhantes[__${acompIndex.index}__].nome}">
+                                    <input class="input input-fancy nome" type="text" th:field="*{acompanhantes[__${acompIndex.index}__].nome}">
                                 </p>
                             </div>
                         </div>
@@ -209,26 +209,22 @@
                     <div class="column">
                         <div class="field">
                             <div class="control">
-                                <p>Gênero acompanhante <span th:text="${acompIndex.index + 1}"></span>:
-                                    <label>
-
-                                        <input type="radio" value="F" th:field="*{acompanhantes[__${acompIndex.index}__].genero}">
-                                        <span>F</span>
-                                    </label>
-                                    <label>
-                                        <input type="radio" value="M" th:field="*{acompanhantes[__${acompIndex.index}__].genero}">
-                                        <span> M</span>
-                                    </label>
-                                </p>
-                                </p>
+                                <label>
+                                    <input class="genero" type="radio" value="F" th:field="*{acompanhantes[__${acompIndex.index}__].genero}">
+                                    <span>Feminino</span>
+                                </label>
+                                <label>
+                                    <input class="genero" type="radio" value="M" th:field="*{acompanhantes[__${acompIndex.index}__].genero}">
+                                    <span>Masculino</span>
+                                </label>
                             </div>
                         </div>
                     </div>
                     <div class="column">
                         <div class="field">
                             <div class="control">
-                                <p> Data de nascimento <span th:text="${acompIndex.index + 1}"></span>:
-                                    <input placeholder="Clique para selecionar uma data" class="input input-fancy datepicker"
+                                <p>Data de nascimento <span th:text="${acompIndex.index + 1}"></span>:
+                                    <input placeholder="Clique para selecionar uma data" class="data-nasc-acomp input input-fancy datepicker-retroativo"
                                            th:field="*{acompanhantes[__${acompIndex.index}__].dataNascimento}"
                                            onkeypress="return false;">
                                 </p>
