<@marcos012, @julianemartins> Remove onclick do botao

--- a/app/src/main/resources/templates/solicitacao/cadastro.html
+++ b/app/src/main/resources/templates/solicitacao/cadastro.html
@@ -235,7 +235,7 @@
                 <div class="column">
                     <div class="field">
                         <div class="control">
-                            <button class="button is-success is-focused" value="Enviar Solicitação" type="submit" onclick="alert('Solicitacao enviada')">Enviar Solicitação</button>
+                            <button class="button is-success is-focused" value="Enviar Solicitação" type="submit">Enviar Solicitação</button>
                             <input class="button" type="reset" value="Limpar Formulário">
                         </div>
                     </div>
